# powercap

./: README.md  main.cc  meson.build  meson_options.txt
data/: meson.build  powercap.service.in
